Added button to generate bounding box from JSON model